--- a/src/fsharp/FSharp.Core.PropertyTests/FSharp.Core.PropertyTests.fsproj
+++ b/src/fsharp/FSharp.Core.PropertyTests/FSharp.Core.PropertyTests.fsproj
@@ -71,7 +71,7 @@
     <Reference Include="System.Observable" Condition="'$(TargetFramework)' == 'sl3-wp' " />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ListProperties.fs" />
+    <Compile Include="ArrayProperties.fs" />
     <Compile Include="NUnitFrameworkShims.fs" Condition="'$(TargetFramework)' == 'sl3-wp'" />
     <CustomCopyLocal Include="FSharp.Core.PropertyTests.dll.config">
       <TargetFilename>FSharp.Core.PropertyTests.dll.config</TargetFilename>
